<resources>
    <string name="app_name">What\'s for Dinner?</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="next_page">Next</string>

    <!-- Strings related to allergies -->
    <string name="allergies">Allergies</string>
    <string name="a_milk">Milk</string>
    <string name="a_peanuts">Peanuts</string>
    <string name="a_tree_nuts">Tree Nuts</string>
    <string name="a_eggs">Eggs</string>
    <string name="a_soy">Soy</string>
    <string name="a_fish">Fish</string>
    <string name="a_shellfish">Shellfish</string>
    <string name="a_wheat">Wheat</string>

    <!-- String related to dietary requirements -->
    <string name="dietaryreq">Dietary Requirements</string>
    <string name="d_vege">Vegetarian</string>
    <string name="d_vegan">Vegan</string>
    <string name="d_gluten">Gluten Free</string>
    <string name="d_lactose">Lactose Intolerant</string>
    <string name="d_pesce">Pesecetarian</string>
    <string name="title_activity_practicedrawer">practicedrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_nav_base">NavBaseActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_fsgdfg">fsgdfg</string>
    <string name="searchByIngr">Search by Ingredient</string>
    <string name="searchByName">Search by Name</string>
    <string name="Save">Save</string>

</resources>
