<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context=".AllergiesFragment">

    <!-- TODO: Display selected allergies, provide ability to select/deselect allergies -->
<android.support.constraint.Guideline
    android:id="@+id/guideline2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_end="80dp" />

<LinearLayout
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:orientation="vertical"
    app:layout_constraintBottom_toTopOf="@+id/guideline2"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.436">

    <CheckBox
        android:id="@+id/checkBoxMilkF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a_milk" />

    <CheckBox
        android:id="@+id/checkBoxPeanutsF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a_peanuts" />

    <CheckBox
        android:id="@+id/checkBoxTreeNutsF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a_tree_nuts" />

    <CheckBox
        android:id="@+id/checkBoxEggsF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a_eggs" />

    <CheckBox
        android:id="@+id/checkBoxSoyF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a_soy" />

    <CheckBox
        android:id="@+id/checkBoxFishF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a_fish" />

    <CheckBox
        android:id="@+id/checkBoxShellfishF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a_shellfish" />

    <CheckBox
        android:id="@+id/checkBoxWheatF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a_wheat" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/allergyOtherF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Other - Please Specify" />
    </android.support.design.widget.TextInputLayout>
</LinearLayout>

    <!-- TODO: Change button to update allergy selections -->
    <Button
        android:id="@+id/allergySaveBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

</android.support.constraint.ConstraintLayout>